[package]
name = "SUDOKU-SOLVER"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
flurry = "0.4.0"
chashmap = "2.2"
num-bigint = "~0.4"
bitvec = "~1.0.0"
board-em-api = "0.1.0"
sudoku-solver = "0.4.0"
array2d = "0.2.1" 